--- a/index.html
+++ b/index.html
@@ -173,8 +173,10 @@
         <div class="container">
             <h2 class="experience__section__title">Experiência Profissional</h2>
             <div class="experience__box">
+
                 <!-- Insira a logo/captura de seu projeto/trabalho -->
-                <img class="experience__image" src="assets/images/encriptador.gif">
+                <img class="experience__image" src="assets/images/experiences/encrypter.gif">
+
                 <div class="experience__info">
                     <h2 class="experience__title">Decodificador de texto</h2>
                     <h3 class="experience__text">Challenge Alura Codificador </h3>
@@ -195,9 +197,9 @@
             </div>
 
             <div class="experience__box">
-                <!-- Insira a logo/captura de seu projeto/trabalho -->
 
-                <img class="experience__image" src="assets/images/jogo.gif">
+                <!-- Insira a logo/captura de seu projeto/trabalho -->
+                <img class="experience__image" src="assets/images/experiences/pixelated game.gif">
 
                 <div class="experience__info">
                     <h2 class="experience__title">Jogo criado com HTML, CSS e JavaScript</h2>
@@ -212,6 +214,30 @@
                         <span class="experience__demo">
                             <a href="https://wollace-buarque.github.io/Jogo-simples/" target="_blank">
                                 <button class="experience__botao--demo">Ver demo</button>
+                            </a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="experience__box">
+                
+                <!-- Insira a logo/captura de seu projeto/trabalho -->
+                <img class="experience__image" src="assets/images/experiences/spotify-2022.gif">
+
+                <div class="experience__info">
+                    <h2 class="experience__title">Página do Spotify feito com Bootstrap 5</h2>
+                    <h3 class="experience__text">Versão apenas para DESKTOP</h3>
+                    <div class="experience__description">
+                        <!-- Insira a link para demonstração do projeto no Github e/ou GithubPages -->
+                        <span class="experience__repo">
+                            <a href="" target="_blank">
+                                <button class="experience__botao--repo experience__disabled">Indisponível</button>
+                            </a>
+                        </span>
+                        <span class="experience__demo">
+                            <a href="#" target="_blank">
+                                <button class="experience__botao--demo experience__disabled">Indisponível</button>
                             </a>
                         </span>
                     </div>
