Alteração no layout dos projetos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Sessão de Menu  -->
     <section class="menu container">
         <header class="header">
-            <img src="assets/images/vector.png">
+            <img src="assets/images/vector.png" alt>
             <h3 class="menu__title">Wollace Buarque</h3>
         </header>
         <nav class="nav">
@@ -41,7 +41,7 @@
     <!-- Sessão de Header/Title/Hero -->
     <section class="title container">
         <div class="title__div">
-            <img class="title__profile" src="assets/images/profile.jpg">
+            <img class="title__profile" src="assets/images/profile.jpg" alt="Foto de Wollace Buarque">
             <div class="title__container" id="#sobremim">
                 <h2 class="title__bio">Olá, meu nome é Wollace Buarque</h2>
                 <h3 class="title__subsection">Eu estou me formando em Ciência da computação e atualmente estou
@@ -51,25 +51,25 @@
                     <li class="title__network__item">
                         <a href="https://github.com/Wollace-Buarque" target="_blank">
                             Github
-                            <img src="assets/images/arrow.png">
+                            <img src="assets/images/arrow.png" alt>
                         </a>
                     </li>
                     <li class="title__network__item">
                         <a href="https://www.linkedin.com/in/wollacebuarque/" target="_blank">
                             Linkedin
-                            <img src="assets/images/arrow.png">
+                            <img src="assets/images/arrow.png" alt>
                         </a>
                     </li>
                     <li class="title__network__item">
                         <a href="https://instagram.com/WollaceBuarque" target="_blank">
                             Instagram
-                            <img src="assets/images/arrow.png">
+                            <img src="assets/images/arrow.png" alt>
                         </a>
                     </li>
                     <li class="title__network__item">
                         <a href="#">
                             Curriculo
-                            <img src="assets/images/arrow.png">
+                            <img src="assets/images/arrow.png" alt>
                         </a>
                     </li>
                 </ul>
@@ -103,32 +103,32 @@
             <h3 class="skills__title">Skills</h3>
             <div class="skills__line">
                 <div class="skills__box">
-                    <img src="assets/images/htlm.png">
+                    <img src="assets/images/htlm.png" alt>
                     <p class="skills__name">Html 5</p>
                 </div>
 
                 <div class="skills__box">
-                    <img src="assets/images/js_icon.png" alt="">
+                    <img src="assets/images/js_icon.png" alt>
                     <p class="skills__name">Javascript</p>
                 </div>
 
                 <div class="skills__box">
-                    <img src="assets/images/php_icon.png" alt="">
+                    <img src="assets/images/php_icon.png" alt>
                     <p class="skills__name">PHP</p>
                 </div>
 
                 <div class="skills__box">
-                    <img class="skills__image" src="assets/images/java_icon.png" alt="">
+                    <img class="skills__image" src="assets/images/java_icon.png" alt>
                     <p class="skills__name">Java</p>
                 </div>
 
                 <div class="skills__box">
-                    <img class="skills__image" src="assets/images/mysql_icon.png" alt="">
+                    <img class="skills__image" src="assets/images/mysql_icon.png" alt>
                     <p class="skills__name">MySQL</p>
                 </div>
 
                 <div class="skills__box">
-                    <img src="assets/images/css_icon.png" alt="">
+                    <img src="assets/images/css_icon.png" alt>
                     <p class="skills__name">CSS</p>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                 <div class="academic__courses__box">
                     <ul class="academic__courses__list">
                         <!-- Insira a logo de seu local de formação -->
-                        <li class="academic__courses__item__image"><img src="assets/images/alura.png"></li>
+                        <li class="academic__courses__item__image"><img src="assets/images/alura.png" alt></li>
                         <li class="academic__courses__item__title">
                             <h4>Alura - Oracle One</h4>
                         </li>
@@ -155,7 +155,7 @@
                 <div class="academic__courses__box">
                     <ul class="academic__courses__list">
                         <!-- Insira a logo de seu local de formação -->
-                        <li class="academic__courses__item__image"><img src="assets/images/uninassau.jpg"></li>
+                        <li class="academic__courses__item__image"><img src="assets/images/uninassau.jpg" alt></li>
                         <li class="academic__courses__item__title">
                             <h4>Ciência da computação</h4>
                         </li>
@@ -175,11 +175,13 @@
             <div class="experience__box">
 
                 <!-- Insira a logo/captura de seu projeto/trabalho -->
-                <img class="experience__image" src="assets/images/experiences/encrypter.gif">
+                <img class="experience__image" src="assets/images/experiences/encrypter.gif"
+                    alt="Gif mostrando o encriptador.">
 
                 <div class="experience__info">
                     <h2 class="experience__title">Decodificador de texto</h2>
-                    <h3 class="experience__text">Challenge Alura Codificador </h3>
+                    <h3 class="experience__text">Challenge Alura do codificador e decodificador. Versão feita apenas
+                        para DESKTOP.</h3>
                     <div class="experience__description">
                         <!-- Insira a link para demonstração do projeto no Github e/ou GithubPages -->
                         <span class="experience__repo">
@@ -199,11 +201,13 @@
             <div class="experience__box">
 
                 <!-- Insira a logo/captura de seu projeto/trabalho -->
-                <img class="experience__image" src="assets/images/experiences/pixelated game.gif">
+                <img class="experience__image" src="assets/images/experiences/pixelated game.gif"
+                    alt="Gif mostrando o jogo.">
 
                 <div class="experience__info">
                     <h2 class="experience__title">Jogo criado com HTML, CSS e JavaScript</h2>
-                    <h3 class="experience__text">Jogo de comer bolinhas para aumentar seu tamanho</h3>
+                    <h3 class="experience__text">Jogo de comer bolinhas para aumentar seu tamanho. Versão feita apenas
+                        para DESKTOP.</h3>
                     <div class="experience__description">
                         <!-- Insira a link para demonstração do projeto no Github e/ou GithubPages -->
                         <span class="experience__repo">
@@ -221,13 +225,14 @@
             </div>
 
             <div class="experience__box">
-                
+
                 <!-- Insira a logo/captura de seu projeto/trabalho -->
-                <img class="experience__image" src="assets/images/experiences/spotify-2022.gif">
+                <img class="experience__image" src="assets/images/experiences/spotify-2022.gif"
+                    alt="Gif mostrando o clone do Spotify de 2022">
 
                 <div class="experience__info">
                     <h2 class="experience__title">Página do Spotify feito com Bootstrap 5</h2>
-                    <h3 class="experience__text">Versão apenas para DESKTOP</h3>
+                    <h3 class="experience__text">Versão feita apenas para DESKTOP.</h3>
                     <div class="experience__description">
                         <!-- Insira a link para demonstração do projeto no Github e/ou GithubPages -->
                         <span class="experience__repo">
@@ -250,7 +255,8 @@
     <section class="formcontato">
         <div class="container">
             <div id="contato" class="formcontato__contato">
-                <img class="formcontato__image" src="assets/images/contact_image.png">
+                <img class="formcontato__image" src="assets/images/contact_image.png"
+                    alt="Imagem de um telefone preto antigo.">
                 <div class="formcontato__text">
                     <h2 class="formcontato__title">Contato</h2>
                     <h3 class="formcontato__subtext">Quer entrar em contato comigo?</h3>
