--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="title__container" id="#sobremim">
                 <h2 class="title__bio">Olá, meu nome é Wollace Buarque</h2>
                 <h3 class="title__subsection">Eu estou me formando em Ciência da computação e atualmente estou
-                    participando no projeto Oracle ONE na Alura.</h3>
+                    participando do projeto Oracle ONE na Alura.</h3>
                 <ul class="title__network">
                     <!-- Ponha os links de suas redes sociais favoritas -->
                     <li class="title__network__item">
