--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio Pessoal</title>
+    <title>Portifólio</title>
 
     <!-- Folha de estilo de CSS Linkado -->
     <link rel="stylesheet" href="assets/css/reset.css">
