Animação no scroll

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- Logo -->
     <link rel="icon" href="assets/images/logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -91,8 +92,6 @@
                     <strong>JAVA</strong> com mais de 3 anos em desenvolvimento de plugins voltado a servidores de
                     Minecraft. Também já criei alguns jogos em 2D.
                 </p>
-                <!-- Caso queira colocar sua própria assinatura, insira aqui! -->
-                <!-- <img src="assets/images/signature.png"> -->
             </div>
         </div>
     </section>
@@ -288,8 +287,10 @@
         </div>
     </section>
 
-    <!-- Script Linkado do seu documento de JavaScript -->
     <script src="assets/js/validate.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/scroll.js"></script>
 </body>
 
 </html>
